--- a/video.html
+++ b/video.html
@@ -35,7 +35,7 @@
         <h2>Final Result</h2>
         <p>Congratulations! You've successfully embedded the video. You can see the embedded video below:</p>
         <!-- Embed your example video here -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/exampleVideo" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://youtu.be/I6DjFX3rgJo?si=J9Bt__PRcbvpMg1H" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <footer>
