--- a/video.html
+++ b/video.html
@@ -28,7 +28,7 @@
     <section>
         <h2>Step N: Embed the Video</h2>
         <p>Use the provided embed code to insert the video into your website.</p>
-        <img src="stepN.png" alt="Step N Screenshot">
+        <img src="step2.png" alt="Step 2 Screenshot">
     </section>
 
     <section>
